objects/Application__c.object
<CustomObject>
    <description>Dealer Application for ACV Capital</description>
    <fields>
        <fullName>ACH_on_file__c</fullName>
        <formula>Account__r.ACH_on_File__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACH on file</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>25</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article__c</fullName>
        <label>Articles of Incorporation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                    <default>true</default>
                    <label>Required</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Monthly_Unit_Sales__c</fullName>
        <label>Average Monthly Unit Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Turn_Time_in_Days__c</fullName>
        <label>Average Turn Time in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Units_on_lot__c</fullName>
        <label>Average Units on lot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Wholesale_Vehicle_Price__c</fullName>
        <label>Average Wholesale Vehicle Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Contact_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bank_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Statement__c</fullName>
        <label>Bank Statement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Required</fullName>
                    <default>true</default>
                    <label>Not Required</label>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Zip</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Auction_Access__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Auction Access</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_City__c</fullName>
        <formula>Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_State__c</fullName>
        <formula>Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Street__c</fullName>
        <formula>Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>General Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>LLC - Member Managed</fullName>
                </value>
                <value>
                    <fullName>LLC - Manager Managed</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Summer Savings</fullName>
                </value>
                <value>
                    <fullName>Spring Into Savings</fullName>
                </value>
                <value>
                    <fullName>60 Days for $60</fullName>
                </value>
                <value>
                    <fullName>March Madness</fullName>
                </value>
                <value>
                    <fullName>ZDS</fullName>
                </value>
                <value>
                    <fullName>No Promotion</fullName>
                </value>
                <value>
                    <fullName>Digital - 2 Waived Fees</fullName>
                </value>
                <value>
                    <fullName>California Blitz Priority</fullName>
                </value>
                <value>
                    <fullName>Utilization Blitz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cell_Phone_Number__c</fullName>
        <formula>Account__r.cell__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cell Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_Account_Number__c</fullName>
        <label>Confirm Account Number</label>
        <length>25</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Confirm_Routing_Number__c</fullName>
        <label>Confirm Routing Number</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Consent_Received_Count__c</fullName>
        <description>Created to be able to quickly tell if all consent has been received</description>
        <inlineHelpText>Be able to quickly tell if all consent has been received</inlineHelpText>
        <label>Consent Received Count</label>
        <summaryFilterItems>
            <field>Principal__c.Consent_Received__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Principal__c.Ownership__c</field>
            <operation>greaterThan</operation>
            <value>20</value>
        </summaryFilterItems>
        <summaryForeignKey>Principal__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Consent_Required_Count__c</fullName>
        <description>Created to be able to quickly tell if all consent has been received</description>
        <inlineHelpText>Be able to quickly tell if all consent has been received</inlineHelpText>
        <label>Consent Required Count</label>
        <summaryFilterItems>
            <field>Principal__c.Ownership__c</field>
            <operation>greaterThan</operation>
            <value>20</value>
        </summaryFilterItems>
        <summaryForeignKey>Principal__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Consent_Status__c</fullName>
        <formula>IF (( Consent_Received_Count__c = Consent_Required_Count__c ), &quot;Consent Received&quot;, &quot;In Progress&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consent Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Name__c</fullName>
        <formula>Account__r.dba_trade_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DBA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_LB__c</fullName>
        <label>Dealer License (Back)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                    <default>true</default>
                    <label>Required</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_LF__c</fullName>
        <label>Dealer License (Front)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                    <default>true</default>
                    <label>Required</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealership_ID__c</fullName>
        <formula>Account__r.Dealership_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_picture_including_signage__c</fullName>
        <label>Dealership picture including signage</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                    <default>true</default>
                    <label>Required</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declined_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Declined Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Reviewed_by_Sales</fullName>
                    <label>Reviewed by Sales</label>
                </value>
                <value>
                    <fullName>Documents Approved by UW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drivers_LB__c</fullName>
        <label>Driver&apos;s License (Back)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                    <default>true</default>
                    <label>Required</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drivers_LF__c</fullName>
        <label>Driver&apos;s License (Front)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                    <default>true</default>
                    <label>Required</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Existing_Auctions_ACH_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Auctions ACH Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Federal_Tax_ID__c</fullName>
        <formula>Account__r.Tax_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Tax ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_Agent_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurance Company/Agent Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_Agent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurance Company/Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <label>Certificate of Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                    <default>true</default>
                    <label>Required</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interim_Statement__c</fullName>
        <label>Interim Statement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Required</fullName>
                    <default>true</default>
                    <label>Not Required</label>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inventory_Coverage_Amount__c</fullName>
        <label>Inventory Coverage Amount</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_the_Applicant_a_Publicy_Held_Company__c</fullName>
        <label>Is the Applicant aPublicly Held Company?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Business_Name__c</fullName>
        <formula>Account__r.legal_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Business Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Ownership__c</fullName>
        <label>Lot Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owners_Consent_Received_Count__c</fullName>
        <description>Be able to quickly tell if all owners consents (20% or above) have been received</description>
        <inlineHelpText>Be able to quickly tell if all owners consents (20% or above) have been received</inlineHelpText>
        <label>Owners Consent Received Count</label>
        <summaryFilterItems>
            <field>Principal__c.Ownership__c</field>
            <operation>greaterThan</operation>
            <value>20</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Principal__c.Consent_Received__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Principal__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Owners_Consent_Required_Count__c</fullName>
        <label>Owners Consent Required Count</label>
        <summaryFilterItems>
            <field>Principal__c.Ownership__c</field>
            <operation>greaterThan</operation>
            <value>20</value>
        </summaryFilterItems>
        <summaryForeignKey>Principal__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Owners_Consent_Status__c</fullName>
        <formula>IF (( Owners_Consent_Required_Count__c = Owners_Consent_Received_Count__c ), &quot;Received&quot;, &quot;In Progress&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owners Consent Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Credit_Consent_TimeStamp__c</fullName>
        <description>Used for &apos;CSO-459: Application Status Email Trigger - Pending Credit Consent&apos; flow.  Timestamps the date when the status = &apos;Pending credit consent&apos;</description>
        <formula>IF (ISPICKVAL(Status__c, &quot;Pending credit consent&quot;),NOW(),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Credit Consent TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pending_More_Information_TimeStamp__c</fullName>
        <description>Used to record the date when the application status = &apos;Pending More information&quot;.  Required for an reminder email alert that is to be sent 2 days after the application status has been set and no action has been taken.</description>
        <formula>IF (ISPICKVAL(Status__c, &quot;Pending more information&quot;)|| ISPICKVAL(Status__c, &quot;Pending more information&quot;) &amp;&amp; NOT(ISBLANK(Additional_Comments__c)),NOW(),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending More Information TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Personal_Financial_Statement_PFS__c</fullName>
        <label>Personal Financial Statement (PFS)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Required</fullName>
                    <default>true</default>
                    <label>Not Required</label>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <formula>Account__r.Dealer_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <formula>Account__r.Primary_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Name__c</fullName>
        <formula>Account__r.ACV_Capital_Primary_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <formula>Account__r.ACV_Capital_Primary_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Credit_Line__c</fullName>
        <label>Requested Credit Line</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <label>Routing Number</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>State_of_Incorporation_or_Residence__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State of Incorporation or Residence</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Pending credit consent</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Pending more information</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Duplicate Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Voided__c</fullName>
        <label>Voided Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                    <default>true</default>
                    <label>Required</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <formula>Account__r.URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Established__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Year Established</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_Under_Present_Owner__c</fullName>
        <label>Years Under Present Owner</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>year_Tax_Return_for_Business__c</fullName>
        <label>2 year Tax Return for Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Required</fullName>
                    <default>true</default>
                    <label>Not Required</label>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Requested_Credit_Line__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <recordTypes>
        <fullName>ACV_Capital_Application</fullName>
        <active>true</active>
        <description>Dealer application for ACV Capital</description>
        <label>ACV Capital Application</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACV_Capital_additional_information</fullName>
        <active>true</active>
        <description>Enter additional information when the status in pending more inf</description>
        <errorConditionFormula>AND(RecordType.Name = &quot;ACV Capital Application&quot;,
ISPICKVAL(Status__c, &quot;Pending more information&quot;),
ISBlANK(Additional_Comments__c))</errorConditionFormula>
        <errorMessage>Additional comments field is required when marking the status &quot;Pending more information&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACV_Capital_declined_reason_required</fullName>
        <active>true</active>
        <description>Enter a declined reason when the status is declined</description>
        <errorConditionFormula>AND(RecordType.Name = &quot;ACV Capital Application&quot;,
ISPICKVAL(Status__c, &quot;Declined&quot;),
ISBlANK(Declined_Reason__c))</errorConditionFormula>
        <errorMessage>A Declined Reason is required when marking the status &quot;Declined&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>App_Account_Number</fullName>
        <active>true</active>
        <description>Confirm account number equal to account number</description>
        <errorConditionFormula>Account_Number__c  &lt;&gt;  Confirm_Account_Number__c</errorConditionFormula>
        <errorDisplayField>Confirm_Account_Number__c</errorDisplayField>
        <errorMessage>Confirm account number does not match</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>App_Routing_Number</fullName>
        <active>true</active>
        <description>Validate the field routing number is equal to confirm routing number</description>
        <errorConditionFormula>Routing_Number__c  &lt;&gt;  Confirm_Routing_Number__c</errorConditionFormula>
        <errorDisplayField>Confirm_Routing_Number__c</errorDisplayField>
        <errorMessage>Confirm routing number does not match</errorMessage>
    </validationRules>
</CustomObject>